fix: navbar width collapse after evaluation

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 #tree-view-container{
-    height: 100%;
-    width: 100%;
+    // height: 100%;
+    // width: 100%;
     border: solid 1px gray;
 }
 
@@ -12,7 +12,7 @@ div.gutter.gutter-horizontal{
     float: left;
     background: lightgray;
     border: solid 1px gray;
-    height: 100%;
+    // height: 100%;
 }
 
 div.gutter.gutter-horizontal:hover{
@@ -26,25 +26,24 @@ div.gutter.gutter-vertical{
 }
 
 .splited-item{
-    float: left;
-    height: inherit;
+    // float: left;
+    // height: inherit;
     overflow: scroll;
 }
 
 #root, #root>div{
-    height: 50em;
+    // height: 50em;
 }
 
 #editor {
-  width: 100%;
-  height: 100%;
+//   width: 100%;
+//   height: 100%;
 }
 
 .header{
     background: var(--color1);
     // height: 3rem;
     color: white;
-    position: relative;
 }
 
 :root{
